# target-sharpi

./: .env.example  Dockerfile  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md  meltano.yml  pyproject.toml
.claude/: settings.local.json
target_sharpi/: __init__.py  __main__.py  sinks.py  target.py
