[project]
name = "target-sharpi"
version = "0.0.4"
description = "Singer target for Sharpi, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Vinicius Mesel", email = "vini@sharpi.com.br" }]
keywords = [
    "ELT",
    "Sharpi",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.48.1",
    "requests~=2.32.3",
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.7.0",
]

[project.scripts]
# CLI declaration
target-sharpi = 'target_sharpi.target:TargetSharpi.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.16.0",
    "ty>=0.0.1-alpha.16",
    "types-requests",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "E501",  # line-too-long
]
select = ["ALL"]

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"